fix: img alignment

--- a/src/components/notion/notion.scss
+++ b/src/components/notion/notion.scss
@@ -46,6 +46,12 @@
   }
 }
 
+.notion-text {
+  img {
+    @apply inline;
+  }
+}
+
 .notion-bookmark {
   @apply rounded-lg border md:flex-row flex-col-reverse;
 
